--- a/stm32/wally.ioc
+++ b/stm32/wally.ioc
@@ -16,14 +16,13 @@ Mcu.Package=TSSOP20
 Mcu.Pin0=PB8
 Mcu.Pin1=PF0-OSC_IN
 Mcu.Pin10=PA7
-Mcu.Pin11=PB1
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=VP_SYS_VS_PINREMAP
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=VP_SYS_VS_PINREMAP
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin2=PF1-OSC_OUT
 Mcu.Pin3=PA0
 Mcu.Pin4=PA1
@@ -32,7 +31,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=19
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042F6Px
@@ -46,18 +45,14 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.USB_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-PA0.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PA0.GPIO_Label=HDMI_I2C_EN
-PA0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=HDMI_5V_IN
 PA0.Locked=true
-PA0.PinState=GPIO_PIN_SET
-PA0.Signal=GPIO_Output
-PA1.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PA1.GPIO_Label=HDMI_5V_EN
-PA1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA0.Signal=GPIO_Input
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=HDMI_HPD_IN
 PA1.Locked=true
-PA1.PinState=GPIO_PIN_SET
-PA1.Signal=GPIO_Output
+PA1.Signal=GPIO_Input
 PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
@@ -78,33 +73,26 @@ PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=HDMI_5V_IN
+PA4.GPIO_Label=HDMI_5V_EN
 PA4.Locked=true
-PA4.Signal=GPIO_Input
+PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=HDMI_CEC_IN
 PA5.Locked=true
 PA5.Mode=CEC_Activate
 PA5.Signal=CEC
-PA6.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PA6.GPIO_Label=HDMI_HPD_EN
-PA6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=HMI_LED1
 PA6.Locked=true
-PA6.PinState=GPIO_PIN_SET
 PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=HDMI_HPD_IN
+PA7.GPIO_Label=HMI_LED0
 PA7.Locked=true
-PA7.Signal=GPIO_Input
-PB1.GPIOParameters=PinState,GPIO_Label
-PB1.GPIO_Label=LED0
-PB1.Locked=true
-PB1.PinState=GPIO_PIN_SET
-PB1.Signal=GPIO_Output
+PA7.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_Label
-PB8.GPIO_Label=BOOT
+PB8.GPIO_Label=HDMI_HPD_EN
 PB8.Locked=true
-PB8.Signal=GPIO_Input
+PB8.Signal=GPIO_Output
 PF0-OSC_IN.GPIOParameters=GPIO_Speed,GPIO_PuPdOD
 PF0-OSC_IN.GPIO_PuPdOD=GPIO_PULLUP
 PF0-OSC_IN.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -164,8 +152,10 @@ RCC.VCOOutput2Freq_Value=8000000
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
+USB_DEVICE.APP_RX_DATA_SIZE=128
+USB_DEVICE.APP_TX_DATA_SIZE=1
 USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,APP_RX_DATA_SIZE,APP_TX_DATA_SIZE
 USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 VP_SYS_VS_PINREMAP.Mode=PINREMAP
