--- a/stm32/wally.ioc
+++ b/stm32/wally.ioc
@@ -2,10 +2,8 @@
 Mcu.Family=STM32F0
 PA6.GPIOParameters=GPIO_Label
 VP_SYS_VS_PINREMAP.Mode=PINREMAP
-SH.GPXTI1.0=GPIO_EXTI1
 ProjectManager.MainLocation=Core/Src
 RCC.I2SFreq_Value=48000000
-USB_DEVICE.CLASS_NAME_FS=CDC
 RCC.USART1Freq_Value=48000000
 ProjectManager.ProjectFileName=wally.ioc
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
@@ -13,16 +11,13 @@ PB8.GPIOParameters=GPIO_Label
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F042F6Px
 Mcu.PinsNb=19
-NVIC.USB_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 ProjectManager.NoMain=false
-USB_DEVICE.VirtualModeFS=Cdc_FS
 RCC.PLLCLKFreq_Value=16000000
 PA3.GPIO_PuPd=GPIO_PULLUP
 PA0.GPIO_Label=HDMI_5V_IN
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_HDMI_CEC_Init-HDMI_CEC-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_HDMI_CEC_Init-HDMI_CEC-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA11.Mode=Device
-SH.GPXTI0.ConfNb=1
 PA3.GPIOParameters=GPIO_Speed,GPIO_PuPd
 ProjectManager.DefaultFWLocation=true
 PA6.GPIO_Label=LED_RED
@@ -31,8 +26,8 @@ ProjectManager.DeletePrevious=true
 PF1-OSC_OUT.Locked=true
 VP_SYS_VS_PINREMAP.Signal=SYS_VS_PINREMAP
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,APP_RX_DATA_SIZE,APP_TX_DATA_SIZE
 PA2.GPIOParameters=GPIO_Speed
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 USART2.BaudRate=115200
 PinOutPanel.RotationAngle=0
 RCC.FamilyName=M
@@ -54,22 +49,20 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 PF0-OSC_IN.GPIO_PuPd=GPIO_PULLUP
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=48000000
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
-Mcu.IPNb=7
+Mcu.IPNb=6
 ProjectManager.PreviousToolchain=
 PF1-OSC_OUT.GPIO_PuPd=GPIO_PULLUP
-HDMI_CEC.BREErrorBitGen=CEC_BRE_ERRORBIT_GENERATION
 VP_RCC_USB.Mode=CRS SYNC Source USB
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 ProjectManager.RegisterCallBack=
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-PF1-OSC_OUT.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
-PF1-OSC_OUT.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PF1-OSC_OUT.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA1.Signal=GPIO_Input
 RCC.AHBFreq_Value=48000000
 Mcu.Pin0=PB8
+PB1.Locked=true
 Mcu.Pin1=PF0-OSC_IN
 Mcu.Pin2=PF1-OSC_OUT
 Mcu.Pin3=PA0
@@ -78,11 +71,11 @@ Mcu.Pin5=PA2
 PA5.Signal=CEC
 ProjectManager.ProjectBuild=false
 PA0.Locked=true
-PF0-OSC_IN.GPIO_Label=I2C1_SDA
+PF0-OSC_IN.GPIO_Label=HDMI_SDA
 board=custom
 PA4.Locked=true
 USART2.VirtualMode-Asynchronous=VM_ASYNC
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false
 ProjectManager.LastFirmware=true
 RCC.VCOOutput2Freq_Value=8000000
 ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.2
@@ -90,20 +83,18 @@ MxDb.Version=DB.6.0.21
 PA1.GPIOParameters=GPIO_Label
 ProjectManager.BackupPrevious=false
 MxCube.Version=6.2.1
-PF0-OSC_IN.Locked=true
 PA14.Mode=Serial_Wire
-HDMI_CEC.LBPEErrorBitGen=CEC_LBPE_ERRORBIT_GENERATION
+PF0-OSC_IN.Locked=true
+PB1.GPIO_Label=LED_YELLOW
 File.Version=6
-PF1-OSC_OUT.GPIO_Label=I2C1_SCL
+PF1-OSC_OUT.GPIO_Label=HDMI_SCL
 PA1.GPIO_Label=HDMI_HPD_IN
 VP_SYS_VS_Systick.Mode=SysTick
-PB8.Locked=true
-PF0-OSC_IN.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA4.GPIOParameters=GPIO_Label
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA13.Mode=Serial_Wire
-ProjectManager.FreePins=true
+ProjectManager.FreePins=false
 RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,PLLCLKFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F042F6Px
@@ -113,7 +104,6 @@ ProjectManager.ProjectName=wally
 ProjectManager.UnderRoot=true
 PA0.Signal=GPIO_Input
 RCC.HSICECFreq_Value=32786.88524590164
-Mcu.IP6=USB_DEVICE
 ProjectManager.CoupleFile=false
 VP_RCC_USB.Signal=RCC_USB
 PA4.Signal=GPIO_Output
@@ -121,11 +111,10 @@ NVIC.CEC_CAN_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 RCC.SYSCLKFreq_VALUE=48000000
 Mcu.Package=TSSOP20
 PA6.Signal=GPIO_Output
+PB1.Signal=GPIO_Output
 RCC.TimSysFreq_Value=48000000
 PA1.Locked=true
 PA7.GPIO_Label=LED_GREEN
-PA3.Locked=true
-PA5.Locked=true
 PA7.Locked=true
 PA12.Mode=Device
 PA5.GPIO_Label=HDMI_CEC_IN
@@ -133,47 +122,39 @@ NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ToolChainLocation=
-SH.GPXTI0.0=GPIO_EXTI0
-PA11.Signal=USB_DM
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-USB_DEVICE.APP_TX_DATA_SIZE=1
+PA11.Signal=USB_DM
 PA14.Signal=SYS_SWCLK
-ProjectManager.HeapSize=0x100
+ProjectManager.HeapSize=0x400
 PA0.GPIOParameters=GPIO_Label
-Mcu.Pin15=VP_RCC_USB
+Mcu.Pin15=PA14
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=VP_SYS_VS_PINREMAP
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin16=VP_RCC_USB
 PA5.GPIOParameters=GPIO_Label
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
+Mcu.Pin13=PA12
+Mcu.Pin14=PA13
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin11=PA11
-Mcu.Pin12=PA12
+Mcu.Pin17=VP_SYS_VS_PINREMAP
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin11=PB1
+Mcu.Pin12=PA11
 Mcu.Pin10=PA7
 RCC.CECFreq_Value=32786.88524590164
-USB_DEVICE.APP_RX_DATA_SIZE=128
 RCC.APB1TimFreq_Value=48000000
 PB8.Signal=GPIO_Output
 PA2.Mode=Asynchronous
-PF0-OSC_IN.Signal=GPXTI0
-PF0-OSC_IN.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-SH.GPXTI1.ConfNb=1
+PF0-OSC_IN.Signal=GPIO_Input
+PF0-OSC_IN.GPIOParameters=GPIO_PuPd,GPIO_Label
 RCC.APB1Freq_Value=48000000
-HDMI_CEC.IPParameters=BREErrorBitGen,LBPEErrorBitGen
-USB_DEVICE.VirtualMode=Cdc
 PA4.GPIO_Label=HDMI_5V_EN
 PA7.GPIOParameters=GPIO_Label
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DeviceId=STM32F042F6Px
-PF1-OSC_OUT.Signal=GPXTI1
+PF1-OSC_OUT.Signal=GPIO_Input
 ProjectManager.LibraryCopy=1
 PA3.Signal=USART2_RX
+PB1.GPIOParameters=GPIO_Label
 PA5.Mode=CEC_Activate
 PA7.Signal=GPIO_Output
-NVIC.EXTI0_1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-PA2.Locked=true
 PA6.Locked=true
 isbadioc=false
