--- a/stm32/wally.ioc
+++ b/stm32/wally.ioc
@@ -4,6 +4,7 @@ PA6.GPIOParameters=GPIO_Label
 VP_SYS_VS_PINREMAP.Mode=PINREMAP
 ProjectManager.MainLocation=Core/Src
 RCC.I2SFreq_Value=48000000
+USB_DEVICE.CLASS_NAME_FS=CDC
 RCC.USART1Freq_Value=48000000
 ProjectManager.ProjectFileName=wally.ioc
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
@@ -11,11 +12,13 @@ PB8.GPIOParameters=GPIO_Label
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F042F6Px
 Mcu.PinsNb=19
+NVIC.USB_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 ProjectManager.NoMain=false
+USB_DEVICE.VirtualModeFS=Cdc_FS
 RCC.PLLCLKFreq_Value=16000000
 PA3.GPIO_PuPd=GPIO_PULLUP
 PA0.GPIO_Label=HDMI_5V_IN
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_HDMI_CEC_Init-HDMI_CEC-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_HDMI_CEC_Init-HDMI_CEC-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA11.Mode=Device
 PA3.GPIOParameters=GPIO_Speed,GPIO_PuPd
@@ -26,6 +29,7 @@ ProjectManager.DeletePrevious=true
 PF1-OSC_OUT.Locked=true
 VP_SYS_VS_PINREMAP.Signal=SYS_VS_PINREMAP
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,APP_RX_DATA_SIZE,APP_TX_DATA_SIZE
 PA2.GPIOParameters=GPIO_Speed
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 USART2.BaudRate=115200
@@ -49,10 +53,10 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 PF0-OSC_IN.GPIO_PuPd=GPIO_PULLUP
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=48000000
-Mcu.IPNb=6
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+Mcu.IPNb=7
 ProjectManager.PreviousToolchain=
 PF1-OSC_OUT.GPIO_PuPd=GPIO_PULLUP
-VP_RCC_USB.Mode=CRS SYNC Source USB
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 ProjectManager.RegisterCallBack=
@@ -104,8 +108,8 @@ ProjectManager.ProjectName=wally
 ProjectManager.UnderRoot=true
 PA0.Signal=GPIO_Input
 RCC.HSICECFreq_Value=32786.88524590164
+Mcu.IP6=USB_DEVICE
 ProjectManager.CoupleFile=false
-VP_RCC_USB.Signal=RCC_USB
 PA4.Signal=GPIO_Output
 NVIC.CEC_CAN_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 RCC.SYSCLKFreq_VALUE=48000000
@@ -124,28 +128,32 @@ ProjectManager.CompilerOptimize=6
 ProjectManager.ToolChainLocation=
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 PA11.Signal=USB_DM
+USB_DEVICE.APP_TX_DATA_SIZE=100
 PA14.Signal=SYS_SWCLK
 ProjectManager.HeapSize=0x400
 PA0.GPIOParameters=GPIO_Label
 Mcu.Pin15=PA14
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=VP_RCC_USB
+Mcu.Pin16=VP_SYS_VS_PINREMAP
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 PA5.GPIOParameters=GPIO_Label
 Mcu.Pin13=PA12
 Mcu.Pin14=PA13
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=VP_SYS_VS_PINREMAP
-Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin11=PB1
 Mcu.Pin12=PA11
 Mcu.Pin10=PA7
 RCC.CECFreq_Value=32786.88524590164
+USB_DEVICE.APP_RX_DATA_SIZE=100
 RCC.APB1TimFreq_Value=48000000
 PB8.Signal=GPIO_Output
 PA2.Mode=Asynchronous
 PF0-OSC_IN.Signal=GPIO_Input
 PF0-OSC_IN.GPIOParameters=GPIO_PuPd,GPIO_Label
 RCC.APB1Freq_Value=48000000
+USB_DEVICE.VirtualMode=Cdc
 PA4.GPIO_Label=HDMI_5V_EN
 PA7.GPIOParameters=GPIO_Label
 ProjectManager.CustomerFirmwarePackage=
